[package]
name = "twist_test"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "0.32"           # linear algebra
lambda-twist = "0.7"       # Lambda Twist P3P solver
cv-core = "0.6"                # optional re-exports if needed
cv = "0.6"                # optional re-exports if needed
